# Project-Euler

./: README.md  solution.py  task.py
cpp/: CMakeLists.txt
cpp/include/euler/: problem.hpp
cpp/problems/problem_0000/: main.cpp
cpp/problems/problem_0001/: main.cpp
cpp/problems/problem_0002/: main.cpp
cpp/problems/problem_0003/: main.cpp
cpp/problems/problem_0004/: main.cpp
cpp/problems/problem_0005/: main.cpp
cpp/problems/problem_0008/: main.cpp
cpp/problems/problem_0031/: main.cpp
cpp/problems/problem_0039/: main.cpp
cpp/problems/problem_0077/: main.cpp
cpp/problems/problem_0081/: main.cpp
cpp/problems/problem_0098/: main.cpp
cpp/problems/problem_0895/: main.cpp
py/euler/: problem.py
py/problems/problem_0000/: solver.py
py/problems/problem_0001/: solver.py
py/problems/problem_0002/: solver.py
py/problems/problem_0003/: solver.py
py/problems/problem_0004/: solver.py
py/problems/problem_0005/: solver.py
py/problems/problem_0008/: solver.py
py/problems/problem_0031/: solver.py
py/problems/problem_0039/: solver.py
py/problems/problem_0077/: solver.py
py/problems/problem_0081/: solver.py
py/problems/problem_0098/: solver.py
py/problems/problem_0895/: solver.py
scripts/: _debug_vs.py  new_problem.py  run_cpp_problem.py  run_python_problem.py
